...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quiz_results_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/quiz_exit_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/widget_quiz_continue"
                />
        </LinearLayout>


        <TextView
            android:drawableStart="@android:drawable/ic_dialog_info"
...
