...
            android:layout_weight=".5"
            android:text="@string/widget_mquiz_prev"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mquiz_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:text="@string/widget_mquiz_next"
            android:textSize="20sp"
            android:textStyle="bold" />
...
