...
    <string name="widget_quiz_feedback_response_skipped">You skipped this question.</string>
    <string name="widget_quiz_feedback_feedback_title">Feedback: </string>
    <string name="widget_quiz_num_questions">%1$d questions</string>
    <string name="widget_quiz_pass_threshold">%1$d%% pass threshold </string>
    <string name="widget_quiz_unavailable_section">You must complete all the previous activities in this section before this quiz becomes available to you.</string>
    <string name="widget_quiz_unavailable_course">You must complete all the previous activities in this course before this quiz becomes available to you.</string>
    <string name="widget_quiz_unavailable_attempts">You have already attempted this quiz the max number of times allowed</string>
    <string name="widget_resource_open_file">Open \'%1$s\'</string>

    <string name="course_context_reset">Reset</string>
    <string name="course_context_delete">Delete</string>
    <string name="course_context_update_activity">Update activity</string>
    <string name="course_context_reset_confirm">Are you sure you want to reset this course? It will remove all the progress logs for this course.</string>
...
